14022 zpool online -e breaks access to pool