usr/src/lib/libzfs/common/libzfs_pool.c
@@ -27,6 +27,7 @@
  * Copyright 2016 Igor Kozhukhov <ikozhukhov@gmail.com>
  * Copyright (c) 2017 Datto Inc.
  * Copyright (c) 2017, Intel Corporation.
+ * Copyright 2022 OmniOS Community Edition (OmniOSce) Association.
  */
 
 #include <ctype.h>
@@ -39,6 +40,7 @@
 #include <strings.h>
 #include <unistd.h>
 #include <libgen.h>
+#include <sys/dkio.h>
 #include <sys/efi_partition.h>
 #include <sys/vtoc.h>
 #include <sys/zfs_ioctl.h>
@@ -2798,6 +2800,7 @@ zpool_relabel_disk(libzfs_handle_t *hdl, const char *name)
 {
 	char path[MAXPATHLEN];
 	char errbuf[1024];
+	enum dkio_state st;
 	int fd, error;
 	int (*_efi_use_whole_disk)(int);
 
@@ -2819,12 +2822,25 @@ zpool_relabel_disk(libzfs_handle_t *hdl, const char *name)
 	 * ignore that error and continue on.
 	 */
 	error = _efi_use_whole_disk(fd);
-	(void) close(fd);
 	if (error && error != VT_ENOSPC) {
+		(void) close(fd);
 		zfs_error_aux(hdl, dgettext(TEXT_DOMAIN, "cannot "
 		    "relabel '%s': unable to read disk capacity"), name);
 		return (zfs_error(hdl, EZFS_NOCAP, errbuf));
 	}
+
+	/*
+	 * Writing a new EFI partition table to the disk will have marked
+	 * the geometry as needing re-validation. Before returning, force
+	 * it to be checked by querying the device state, otherwise the
+	 * subsequent vdev_reopen() will fail to read the device size,
+	 * faulting the pool.
+	 */
+	st = DKIO_NONE;
+	ioctl(fd, DKIOCSTATE, (caddr_t)&st);
+
+	(void) close(fd);
+
 	return (0);
 }
 
